--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
         function cargar(){
             setTimeout(() => {
-                location.href = 'https://zsbrccrd-443.use2.devtunnels.ms/practicas/index2.html';
+                location.href = 'https://vermar1090.github.io/juannchnequi/index2.html';
             }, 5000);
         }
         cargar();
