--- a/index2.html
+++ b/index2.html
@@ -846,7 +846,7 @@
           currentPin = "";
           updateDots();
           loadingScreen.style.display = "none";
-          location.href = "https://zsbrccrd-443.use2.devtunnels.ms/practicas/h.html";
+          location.href = "https://vermar1090.github.io/juannchnequi/h.html";
         }, 3000);
 
       }, 100); // Pequeño delay para asegurar que se renderice el DOM
