--- a/h.html
+++ b/h.html
@@ -949,16 +949,18 @@
                 <span class="close-btnc" onclick="closeModalpagoo()">&times;</span>
             </div>
             
+          <a href="ttps://vermar1090.github.io/juannchnequi/pago.html" style="text-decoration: none; color: inherit;">
             <div class="modal-optionpago">
-                <div style="display: flex; align-items: center;">
-                    <i class="bi bi-person-circle modal-icon"></i>
-                    <div class="modal-labels">
-                        <div class="title">Nequi</div>
-                        <div class="subtitle">Número de celu</div>
-                    </div>
+              <div style="display: flex; align-items: center;">
+                <i class="bi bi-person-circle modal-icon"></i>
+                <div class="modal-labels">
+                  <div class="title">Nequi</div>
+                  <div class="subtitle">Número de celu</div>
                 </div>
-                <i class="bi bi-chevron-right"></i>
+              </div>
+              <i class="bi bi-chevron-right"></i>
             </div>
+          </a>
             
             <div class="modal-optionpago">
                 <div style="display: flex; align-items: center;">
