--- a/h.html
+++ b/h.html
@@ -949,7 +949,7 @@
                 <span class="close-btnc" onclick="closeModalpagoo()">&times;</span>
             </div>
             
-          <a href="ttps://vermar1090.github.io/juannchnequi/pago.html" style="text-decoration: none; color: inherit;">
+          <a href="https://vermar1090.github.io/juannchnequi/pago.html" style="text-decoration: none; color: inherit;">
             <div class="modal-optionpago">
               <div style="display: flex; align-items: center;">
                 <i class="bi bi-person-circle modal-icon"></i>
