--- a/pago.html
+++ b/pago.html
@@ -229,7 +229,7 @@
     <!-- Campo Celular -->
     <div class="input-grupo" id="grupoCel">
         <label for="cel">Cel</label>
-        <input id="cel" type="text" maxlength="10" oninput="validarCelular()" />
+        <input id="cel" type="number" maxlength="10" oninput="validarCelular()" />
         <i class="bi bi-person-plus input-icono-derecha"></i>
     </div>
 
