--- a/h.html
+++ b/h.html
@@ -618,9 +618,9 @@
             </svg>
           </span>
         </small>
-        <h2 id="saldo-visible">$ 85.560.000 <small>,05</small></h2>
+        <h2 id="saldo-visible">$ 35.560.000 <small>,05</small></h2>
         <h2 id="saldo-oculto" style="display: none">$ *****</h2>
-        <small id="total-visible">Total $ 85.560.000</small>
+        <small id="total-visible">Total $ 35.560.000</small>
         <small id="total-oculto" style="display: none">Total $ *******</small><br />
         <button class="btn-plata">
           Tu plata
@@ -911,8 +911,8 @@
 
 
 
-
-      <div class="item" onclick="handleAction('servicios')">
+        <a href="https://vermar1090.github.io/juannchnequi/qr.html" style="text-decoration: none; color: inherit;"></a>
+      <div class="item" >
         <span class="label">Código QR</span>
         <div class="icon-btn "><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
             class="bi bi-qr-code-scan" viewBox="0 0 16 16">
@@ -925,6 +925,7 @@
             <path d="M12 9h2V8h-2z" />
           </svg></div>
       </div>
+       </a>
 
       <div class="item" onclick="handleAction('servicios')">
         <span class="label">Recarga Nequi</span>
@@ -949,7 +950,7 @@
                 <span class="close-btnc" onclick="closeModalpagoo()">&times;</span>
             </div>
             
-          <a href="https://vermar1090.github.io/juannchnequi/pago.html" style="text-decoration: none; color: inherit;">
+           <a href="https://vermar1090.github.io/juannchnequi/pago.html" style="text-decoration: none; color: inherit;">
             <div class="modal-optionpago">
               <div style="display: flex; align-items: center;">
                 <i class="bi bi-person-circle modal-icon"></i>
@@ -961,6 +962,7 @@
               <i class="bi bi-chevron-right"></i>
             </div>
           </a>
+
             
             <div class="modal-optionpago">
                 <div style="display: flex; align-items: center;">
