--- a/h.html
+++ b/h.html
@@ -618,9 +618,9 @@
             </svg>
           </span>
         </small>
-        <h2 id="saldo-visible">$ 35.560.000 <small>,05</small></h2>
+        <h2 id="saldo-visible">$ 85.560.000 <small>,05</small></h2>
         <h2 id="saldo-oculto" style="display: none">$ *****</h2>
-        <small id="total-visible">Total $ 35.560.000</small>
+        <small id="total-visible">Total $ 85.560.000</small>
         <small id="total-oculto" style="display: none">Total $ *******</small><br />
         <button class="btn-plata">
           Tu plata
@@ -911,21 +911,25 @@
 
 
 
-        <a href="https://vermar1090.github.io/juannchnequi/qr.html" style="text-decoration: none; color: inherit;"></a>
-      <div class="item" >
-        <span class="label">Código QR</span>
-        <div class="icon-btn "><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
-            class="bi bi-qr-code-scan" viewBox="0 0 16 16">
-            <path
-              d="M0 .5A.5.5 0 0 1 .5 0h3a.5.5 0 0 1 0 1H1v2.5a.5.5 0 0 1-1 0zm12 0a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 .5.5v3a.5.5 0 0 1-1 0V1h-2.5a.5.5 0 0 1-.5-.5M.5 12a.5.5 0 0 1 .5.5V15h2.5a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .5-.5m15 0a.5.5 0 0 1 .5.5v3a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1 0-1H15v-2.5a.5.5 0 0 1 .5-.5M4 4h1v1H4z" />
-            <path d="M7 2H2v5h5zM3 3h3v3H3zm2 8H4v1h1z" />
-            <path d="M7 9H2v5h5zm-4 1h3v3H3zm8-6h1v1h-1z" />
-            <path
-              d="M9 2h5v5H9zm1 1v3h3V3zM8 8v2h1v1H8v1h2v-2h1v2h1v-1h2v-1h-3V8zm2 2H9V9h1zm4 2h-1v1h-2v1h3zm-4 2v-1H8v1z" />
-            <path d="M12 9h2V8h-2z" />
-          </svg></div>
-      </div>
-       </a>
+       
+      <a href="https://vermar1090.github.io/juannchnequi/qr.html" style="text-decoration: none; color: inherit; display: block;">
+        <div class="item" >
+          <span class="label" style="font-size: 16px; font-weight: 500;">Código QR</span>
+          <div class="icon-btn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+              class="bi bi-qr-code-scan" viewBox="0 0 16 16">
+              <path
+                d="M0 .5A.5.5 0 0 1 .5 0h3a.5.5 0 0 1 0 1H1v2.5a.5.5 0 0 1-1 0zm12 0a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 .5.5v3a.5.5 0 0 1-1 0V1h-2.5a.5.5 0 0 1-.5-.5M.5 12a.5.5 0 0 1 .5.5V15h2.5a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .5-.5m15 0a.5.5 0 0 1 .5.5v3a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1 0-1H15v-2.5a.5.5 0 0 1 .5-.5M4 4h1v1H4z" />
+              <path d="M7 2H2v5h5zM3 3h3v3H3zm2 8H4v1h1z" />
+              <path d="M7 9H2v5h5zm-4 1h3v3H3zm8-6h1v1h-1z" />
+              <path
+                d="M9 2h5v5H9zm1 1v3h3V3zM8 8v2h1v1H8v1h2v-2h1v2h1v-1h2v-1h-3V8zm2 2H9V9h1zm4 2h-1v1h-2v1h3zm-4 2v-1H8v1z" />
+              <path d="M12 9h2V8h-2z" />
+            </svg>
+          </div>
+        </div>
+      </a>
+
 
       <div class="item" onclick="handleAction('servicios')">
         <span class="label">Recarga Nequi</span>
