--- a/index2.html
+++ b/index2.html
@@ -65,11 +65,12 @@
       }
 
       .help-icon {
-        width: 28px;
+            width: 28px;
         height: 28px;
         border: 2px solid rgba(255, 255, 255, 0.4);
         border-radius: 50%;
-        display: flex;
+        display: flex
+    ;
         align-items: center;
         justify-content: center;
         color: white;
@@ -78,8 +79,8 @@
         font-family: 'Inter', sans-serif;
         cursor: pointer;
         transition: all 0.3s ease;
-        margin-top: 2%;
-        margin-left: -1%;
+        margin-top: 3%;
+        margin-left: 0%;
       }
 
       .dynamic-key-info {
@@ -369,7 +370,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding: 50px 20px;
+        padding: 25px 20px;
       }
 
       .pin-dots {
@@ -382,7 +383,7 @@
         width: 50px;
         height: 50px;
         background: white;
-        border-radius: 10px;
+        border-radius: 5px;
         transition: all 0.3s ease;
         border: 2px solid rgba(255, 255, 255, 0.2);
       }
@@ -718,10 +719,12 @@
       <!-- PIN Screen -->
       <div class="pin-screen" id="pinScreen">
         <div class="pin-header">
-          <div class="back-arrow"  onclick="goBack()">←</div><br>
+          <div class="back-arrow"  onclick="goBack()"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-arrow-left-short" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M12 8a.5.5 0 0 1-.5.5H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5a.5.5 0 0 1 .5.5"/>
+</svg></div><br>
           
         
-        <div><br>
+        <div><br><br>
 
           <div class="pin-title">Escribe tu clave</div>
         </div>
