--- a/h.html
+++ b/h.html
@@ -171,6 +171,7 @@
       margin-top: -100px;
       /* padding: 28px 24px 120px; */
       position: relative;
+      margin-left: 5%;
     }
 
     .favorites-header {
@@ -236,7 +237,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      margin-bottom: 8px;
+      margin-bottom: 5px;
       font-size: 24px;
       font-weight: 700;
       box-shadow: 0 2px 12px rgba(0, 0, 0, 0.08);
@@ -318,7 +319,6 @@
       padding: 5px 10px;
       background-color: rgba(255, 255, 255, 0.85);
       backdrop-filter: blur(20px);
-      border-top: 1px solid #ddd;
       z-index: 2;
     }
 
@@ -528,8 +528,8 @@
       }
 
       .service-icon {
-        width: 80px;
-        height: 80px;
+        width: 60px;
+        height: 60px;
         box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
       }
 
