--- a/comprobante.html
+++ b/comprobante.html
@@ -67,8 +67,12 @@
 
         .container {
             padding: 20px;
-            background: #ffffff;
+            background-image: url('./ico/fondoooo.png');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
             margin: 15px;
+            border-radius: 12px;
         }
 
         .estado {
@@ -76,6 +80,7 @@
             font-weight: 300;
             font-size: 17px;
             margin-bottom: 15px;
+            margin-top: 13%;
         }
 
         .qr {
@@ -86,7 +91,8 @@
 
         #qr-container canvas {
             border: solid 5px #c5efdd;
-            border-radius: 10px;
+            border-radius: 5px;
+            margin-top: 22%;
         }
 
         .info label {
@@ -97,9 +103,11 @@
         }
 
         .info p {
-            font-size: 16px;
+
+            font-size: 18px;
             margin: 3px 0 10px;
             color: #37283a;
+
         }
 
         .btn {
@@ -129,28 +137,28 @@
 </head>
 
 <body>
-   <div class="header">
-  <div style="display: flex; align-items: center; gap: 10px;">
-    <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor"
-      class="bi bi-arrow-left-short" viewBox="0 0 16 16">
-      <path fill-rule="evenodd"
-        d="M12 8a.5.5 0 0 1-.5.5H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5a.5.5 0 0 1 .5.5" />
-    </svg>
-    <h2 style="margin: 0; font-size: 18px;">Detalle del movimiento</h2>
-  </div>
-  <div style="display: flex; align-items: center; gap: 12px;">
-    <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-question-lg"
-      viewBox="0 0 16 16">
-      <path fill-rule="evenodd"
-        d="M4.475 5.458c-.284 0-.514-.237-.47-.517C4.28 3.24 5.576 2 7.825 2c2.25 0 3.767 1.36 3.767 3.215 0 1.344-.665 2.288-1.79 2.973-1.1.659-1.414 1.118-1.414 2.01v.03a.5.5 0 0 1-.5.5h-.77a.5.5 0 0 1-.5-.495l-.003-.2c-.043-1.221.477-2.001 1.645-2.712 1.03-.632 1.397-1.135 1.397-2.028 0-.979-.758-1.698-1.926-1.698-1.009 0-1.71.529-1.938 1.402-.066.254-.278.461-.54.461h-.777ZM7.496 14c.622 0 1.095-.474 1.095-1.09 0-.618-.473-1.092-1.095-1.092-.606 0-1.087.474-1.087 1.091S6.89 14 7.496 14" />
-    </svg>
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-share"
-      viewBox="0 0 16 16">
-      <path
-        d="M13.5 1a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3M11 2.5a2.5 2.5 0 1 1 .603 1.628l-6.718 3.12a2.5 2.5 0 0 1 0 1.504l6.718 3.12a2.5 2.5 0 1 1-.488.876l-6.718-3.12a2.5 2.5 0 1 1 0-3.256l6.718-3.12A2.5 2.5 0 0 1 11 2.5m-8.5 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3m11 5.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3" />
-    </svg>
-  </div>
-</div>
+    <div class="header">
+        <div style="display: flex; align-items: center; gap: 10px;">
+            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor"
+                class="bi bi-arrow-left-short" viewBox="0 0 16 16">
+                <path fill-rule="evenodd"
+                    d="M12 8a.5.5 0 0 1-.5.5H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5a.5.5 0 0 1 .5.5" />
+            </svg>
+            <h2 style="margin: 0; font-size: 18px;">Detalle del movimiento</h2>
+        </div>
+        <div style="display: flex; align-items: center; gap: 12px;">
+            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-question-lg"
+                viewBox="0 0 16 16">
+                <path fill-rule="evenodd"
+                    d="M4.475 5.458c-.284 0-.514-.237-.47-.517C4.28 3.24 5.576 2 7.825 2c2.25 0 3.767 1.36 3.767 3.215 0 1.344-.665 2.288-1.79 2.973-1.1.659-1.414 1.118-1.414 2.01v.03a.5.5 0 0 1-.5.5h-.77a.5.5 0 0 1-.5-.495l-.003-.2c-.043-1.221.477-2.001 1.645-2.712 1.03-.632 1.397-1.135 1.397-2.028 0-.979-.758-1.698-1.926-1.698-1.009 0-1.71.529-1.938 1.402-.066.254-.278.461-.54.461h-.777ZM7.496 14c.622 0 1.095-.474 1.095-1.09 0-.618-.473-1.092-1.095-1.092-.606 0-1.087.474-1.087 1.091S6.89 14 7.496 14" />
+            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-share"
+                viewBox="0 0 16 16">
+                <path
+                    d="M13.5 1a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3M11 2.5a2.5 2.5 0 1 1 .603 1.628l-6.718 3.12a2.5 2.5 0 0 1 0 1.504l6.718 3.12a2.5 2.5 0 1 1-.488.876l-6.718-3.12a2.5 2.5 0 1 1 0-3.256l6.718-3.12A2.5 2.5 0 0 1 11 2.5m-8.5 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3m11 5.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3" />
+            </svg>
+        </div>
+    </div>
 
 
     <div class="container">
@@ -199,7 +207,7 @@
             <p>Disponible</p>
         </div>
 
-        <button class="btn" onclick="window.location.href='h.html'">Listo</button>
+        <button class="btn" onclick="window.location.href='index.html'">Listo</button>
     </div>
 
     <script>
