--- a/pago.html
+++ b/pago.html
@@ -496,6 +496,11 @@
                     '3147645793': { enmascarado: 'Vic*** Paj***', real: 'Victor Pajaro' },
                     '3243037899': { enmascarado: 'Dei*** Mor***', real: 'Deiby Moreno' },
                     '3201234567': { enmascarado: 'Ana*** Lop***', real: 'Ana López' },
+                     '3002951566': { enmascarado: 'May***** Her***', real: 'Mayerlis Herazo' },
+                     '3006276801': { enmascarado: 'Ron** Mal******', real: 'Ronal Rafael Maldonado' },
+                     '3219519248': { enmascarado: 'Ann*** Rhe****', real: 'Annit Rhenals' },
+                     
+                     '3023657211': { enmascarado: 'Lia**** Alv****', real: 'Lianith Alvarez' },
                 };
                 return contactos[numero] || { enmascarado: 'Usu*** Desconoc***', real: 'Usuario Desconocido' };
             }
