--- a/comprobante.html
+++ b/comprobante.html
@@ -207,7 +207,7 @@
             <p>Disponible</p>
         </div>
 
-        <button class="btn" onclick="window.location.href='index.html'">Listo</button>
+        <button class="btn" onclick="window.location.href='h.html'">Listo</button>
     </div>
 
     <script>
